create a sentimental feature extractor from text files

--- a/7.four_layer_network.ipynb
+++ b/7.four_layer_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -13,27 +13,7 @@
       "Extracting /tmp/data/train-labels-idx1-ubyte.gz\n",
       "Extracting /tmp/data/t10k-images-idx3-ubyte.gz\n",
       "Extracting /tmp/data/t10k-labels-idx1-ubyte.gz\n",
-      "('Epoch', 0, ' completed out of ', 20, ' loss: ', 764838.71017456055)\n",
-      "('Epoch', 1, ' completed out of ', 20, ' loss: ', 181648.74850845337)\n",
-      "('Epoch', 2, ' completed out of ', 20, ' loss: ', 110760.61676597595)\n",
-      "('Epoch', 3, ' completed out of ', 20, ' loss: ', 75778.309823036194)\n",
-      "('Epoch', 4, ' completed out of ', 20, ' loss: ', 54231.176883459091)\n",
-      "('Epoch', 5, ' completed out of ', 20, ' loss: ', 39693.779343128204)\n",
-      "('Epoch', 6, ' completed out of ', 20, ' loss: ', 28692.813565671444)\n",
-      "('Epoch', 7, ' completed out of ', 20, ' loss: ', 21854.878412006041)\n",
-      "('Epoch', 8, ' completed out of ', 20, ' loss: ', 15917.68562889233)\n",
-      "('Epoch', 9, ' completed out of ', 20, ' loss: ', 12213.960283886256)\n",
-      "('Epoch', 10, ' completed out of ', 20, ' loss: ', 9117.7199958092169)\n",
-      "('Epoch', 11, ' completed out of ', 20, ' loss: ', 7314.4052561965818)\n",
-      "('Epoch', 12, ' completed out of ', 20, ' loss: ', 5484.657515251396)\n",
-      "('Epoch', 13, ' completed out of ', 20, ' loss: ', 4675.1939691162797)\n",
-      "('Epoch', 14, ' completed out of ', 20, ' loss: ', 4319.23845005968)\n",
-      "('Epoch', 15, ' completed out of ', 20, ' loss: ', 3844.8040936965263)\n",
-      "('Epoch', 16, ' completed out of ', 20, ' loss: ', 3144.8092911944468)\n",
-      "('Epoch', 17, ' completed out of ', 20, ' loss: ', 3110.8442337478937)\n",
-      "('Epoch', 18, ' completed out of ', 20, ' loss: ', 2688.8322457652848)\n",
-      "('Epoch', 19, ' completed out of ', 20, ' loss: ', 2819.8636641172725)\n",
-      "('Accuracy : ', 0.93940002)\n"
+      "['__class__', '__delattr__', '__dict__', '__doc__', '__format__', '__getattribute__', '__hash__', '__init__', '__module__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', '_epochs_completed', '_images', '_index_in_epoch', '_labels', '_num_examples', 'epochs_completed', 'images', 'labels', 'next_batch', 'num_examples']\n"
      ]
     }
    ],
@@ -42,12 +22,53 @@
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "mnist = input_data.read_data_sets(\"/tmp/data/\",one_hot=True)\n",
     "\n",
+    "print dir(mnist.train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting /tmp/data/train-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/data/train-labels-idx1-ubyte.gz\n",
+      "Extracting /tmp/data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting /tmp/data/t10k-labels-idx1-ubyte.gz\n",
+      "('Epoch', 0, ' completed out of ', 20, ' loss: ', 1558519.4508209229)\n",
+      "('Epoch', 1, ' completed out of ', 20, ' loss: ', 382528.66959762573)\n",
+      "('Epoch', 2, ' completed out of ', 20, ' loss: ', 208872.97538542747)\n",
+      "('Epoch', 3, ' completed out of ', 20, ' loss: ', 117909.89642131329)\n",
+      "('Epoch', 4, ' completed out of ', 20, ' loss: ', 74608.924476648564)\n",
+      "('Epoch', 5, ' completed out of ', 20, ' loss: ', 45785.540639303625)\n",
+      "('Epoch', 6, ' completed out of ', 20, ' loss: ', 31631.547663347927)\n",
+      "('Epoch', 7, ' completed out of ', 20, ' loss: ', 26019.947611088173)\n",
+      "('Epoch', 8, ' completed out of ', 20, ' loss: ', 19330.175087739794)\n",
+      "('Epoch', 9, ' completed out of ', 20, ' loss: ', 15972.421611458063)\n",
+      "('Epoch', 10, ' completed out of ', 20, ' loss: ', 18158.96482214157)\n",
+      "('Epoch', 11, ' completed out of ', 20, ' loss: ', 14635.078787293285)\n",
+      "('Epoch', 12, ' completed out of ', 20, ' loss: ', 13704.913560540172)\n",
+      "('Epoch', 13, ' completed out of ', 20, ' loss: ', 12400.497106966097)\n",
+      "('Epoch', 14, ' completed out of ', 20, ' loss: ', 12153.040139556459)\n",
+      "('Epoch', 15, ' completed out of ', 20, ' loss: ', 9421.6862334954749)\n",
+      "('Epoch', 16, ' completed out of ', 20, ' loss: ', 10949.960153911201)\n",
+      "('Epoch', 17, ' completed out of ', 20, ' loss: ', 10950.709692642093)\n",
+      "('Epoch', 18, ' completed out of ', 20, ' loss: ', 9236.0323418518528)\n",
+      "('Epoch', 19, ' completed out of ', 20, ' loss: ', 9701.7692485002481)\n",
+      "('Accuracy : ', 0.95779997)\n"
+     ]
+    }
+   ],
+   "source": [
     "x = tf.placeholder(tf.float32, shape=[None, 784])\n",
     "y_ = tf.placeholder(tf.float32, shape=[None, 10])\n",
     "\n",
-    "h1_nodes = 250\n",
-    "h2_nodes = 100\n",
-    "h3_nodes = 600\n",
+    "h1_nodes = 600\n",
+    "h2_nodes = 500\n",
+    "h3_nodes = 400\n",
     "output_nodes = 10\n",
     "batch_size = 100\n",
     "\n",
@@ -108,13 +129,6 @@
     "            \n",
     "            "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
