--- a/For Random Code testing.ipynb
+++ b/For Random Code testing.ipynb
@@ -2,38 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "63\n"
+     "ename": "ImportError",
+     "evalue": "No module named nltk",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-1d2184025e54>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: No module named nltk"
      ]
     }
    ],
-   "source": [
-    "#Here we are defining the name of the graph, scopes A, B and C.\n",
-    "with tf.name_scope(\"MyOperationGroup\"):\n",
-    "    with tf.name_scope(\"Scope_A\"):\n",
-    "        a = tf.add(1, 2, name=\"Add_these_numbers\")\n",
-    "        b = tf.multiply(a, 3)\n",
-    "    with tf.name_scope(\"Scope_B\"):\n",
-    "        c = tf.add(4, 5, name=\"And_These_ones\")\n",
-    "        d = tf.multiply(c, 6, name=\"Multiply_these_numbers\")\n",
-    "\n",
-    "with tf.name_scope(\"Scope_C\"):\n",
-    "    e = tf.multiply(4, 5, name=\"B_add\")\n",
-    "    f = tf.div(c, 6, name=\"B_mul\")\n",
-    "g = tf.add(b, d)\n",
-    "h = tf.multiply(g, f)\n",
-    "\n",
-    "with tf.Session() as sess:\n",
-    "    writer = tf.summary.FileWriter(\"output2\", sess.graph)\n",
-    "    print(sess.run(h))\n",
-    "    writer.close()\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
